--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=4001
 DB_CNN=mongodb+srv://db:txYClM61heljxQKS@cluster0.6obkq.mongodb.net/mern_calendar
+SECRET_JWT_SEED=Esto-Es-UnA-PalbR@_SecretA12341267
